# swiss-army-knife

./: .SRCINFO  CHANGELOG.md  CHANGELOG.org  Makefile  Makefile.old  NOTES.org  PKGBUILD  README.org  cabal.project  cabal.project.freeze  swiss-army-knife-hs.cabal  swiss-army-knife.cabal
app/: Sakd.hs  SwissArmyKnife.hs
docs/: sak.org
lib/: CommandLine.hs  Knives.hs  Utils.hs
lib/Knives/: ExtIP.hs  Kernel.hs  NetMan.hs  Sleep.hs  SysNet.hs  Version.hs  WireGuard.hs  YamlMacros.hs  ZfsCheck.hs
lib/SAK/: DSL.hs
lib/Yaml/: Parser.hs
playground/: SimpleParse.hs  sampleknife.json  sampleknife.yaml  sampleknives.sak
systemd/: sakd.system
