cabal-version: 2.4
name:           swiss-army-knife
version:        1.1.0.3
synopsis:       A collection of small tools to make life a bit easier for the command-line.
category:       System
description:    Please see the README on GitHub at <https://github.com/flajann2/swiss-army-knife#readme>
homepage:       https://github.com/flajann2/swiss-army-knife#readme
bug-reports:    https://github.com/flajann2/swiss-army-knife/issues
author:         Fred Mitchell
maintainer:     fred.mitchell@atomlogik.de
copyright:      2024-2026 Fred Mitchell & Atomlogik
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    CHANGELOG.org
    LICENSE
extra-doc-files:
    README.org
    CHANGELOG.org
    CHANGELOG.md
    
tested-with: GHC == 9.14.1

source-repository head
  type: git
  location: https://github.com/flajann2/swiss-army-knife

library
  exposed-modules:
      CommandLine
      Utils
      Knives
      Knives.Version
      Knives.Sleep
      Knives.ExtIP
      Knives.WireGuard
      Knives.ZfsCheck
      Knives.Kernel
      Knives.SysNet
      Knives.NetMan
  autogen-modules:
      Paths_swiss_army_knife
  other-modules:
      Paths_swiss_army_knife
  hs-source-dirs:
      lib
  ghc-options: -Wall
  build-depends:
      aeson                   >= 2.1     && < 2.4
    , base                    >= 4.18    && < 5
    , bytestring              >= 0.11    && < 0.13
    , directory               >= 1.3.8   && < 1.4
    , filepath                >= 1.4.2   && < 1.6
    , http-conduit            >= 2.3.8   && < 2.4
    , optparse-applicative    >= 0.18    && < 0.20
    , process                 >= 1.6.18  && < 1.7
    , resolv                  >= 0.1.2   && < 0.3
    , split                   >= 0.2.5   && < 0.3
  default-language: GHC2024

executable sak
  main-is: SwissArmyKnife.hs
  autogen-modules:
      Paths_swiss_army_knife
  other-modules:
      Paths_swiss_army_knife
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                    >= 4.18    && < 5
    , optparse-applicative    >= 0.18    && < 0.20
    , swiss-army-knife
  default-language: GHC2024

test-suite swiss-army-knife-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  autogen-modules:
      Paths_swiss_army_knife
  other-modules:
      Paths_swiss_army_knife
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                    >= 4.18    && < 5
    , swiss-army-knife
  default-language: GHC2024
